Resize images with image_processing and install required gems and yarn add

--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "RoR-Capstone",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "imagemagick": "^0.1.3",
+    "vips": "^1.0.0"
+  }
 }
